# strike

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  strike_backend.did  turbo.json
apps/chrome-extension/: index.html  package.json  vite.config.ts  vite.config.ts.timestamp-1750944174836-d909eefa22868.mjs
apps/chrome-extension/.github/workflows/: publish.yml
apps/chrome-extension/src/: background.ts  contentScript.ts  main.tsx  manifest.ts  publish-chrome-extension.js
apps/chrome-extension/src/popup/: ConnecProvider.tsx  Popup.tsx  index.css  popup.tsx  provider.tsx
apps/chrome-extension/src/popup/assets/: XverseWalletLogo.tsx
apps/chrome-extension/src/popup/components/: Footer.tsx  Header.tsx  ToggleSwitch.tsx  (+1 more)
apps/site/: .env.example  package.json  tailwind.config.js
apps/site/public/: actions.json  schema.json  updated.json
apps/site/src/: config.ts
apps/site/src/app/: context.tsx  globals.css  layout.tsx  page.tsx
apps/site/src/assets/: OranjOrangeIcon.tsx  OranjWhiteIcon.tsx  index.ts  main.css
apps/site/src/backend/: index.ts  strike_backend.did.d.ts  strike_backend.did.js  types.ts
apps/site/src/components/: index.ts
apps/site/src/provider/: ConnectProvider.tsx
apps/site/src/views/: index.tsx
canisters/strike_backend/: Cargo.toml  strike_backend.did
canisters/strike_backend/src/: admins.rs  lib.rs  strike.rs  test.rs
canisters/strike_backend/src/types/: pagination.rs
strike_actions/: Cargo.toml  LICENSE  README.md
strike_actions/examples/: basic_usage.rs
strike_actions/src/: lib.rs
(+26 files in other folders)
