[package]
name = "strike-actions"
version = "0.1.0"
edition = "2021"
description = "A library for generating Strike Action metadata for blockchain interactions"
license = "MIT"
repository = "https://github.com/yourusername/strike-actions"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
